# seacas

./: .gitignore  CLAUDE.md  EXOMERGE_API_IMPROVEMENTS.md  EXOMERGE_REFACTOR_PROGRESS.md  EXOMERGE_STATUS.md  MEMORY_ANALYSIS.md  install-tpl.sh  setup.py
.github/workflows/: build_aws.yml  build_external_lib.yml  build_netcdf_no_hdf5.yml  build_static.yml  build_test.yml  build_variant.yml  cla.yml  clang-format.yml  codeql.yml  coverity-scan.yml  dependency-review.yml  msys2.yml  (+14 more)
rust/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  EXODUS_HELPER_FEATURES.md  MPI.md  NETCDF.md  NUMPY.md  PYTHON.md  REVIEW.md  REVIEW_SUMMARY.md  RUST.md  rustfmt.toml
rust/compat-tests/: .gitignore  COMPATIBILITY.md  ENHANCEMENTS.md  README.md  STATUS.md  SUMMARY.md  TESTING_PLAN.md  TEST_STATUS.md  build-exodus.sh  build-tpls.sh  ci-run-tests.sh  env-compat.sh  run-compat-tests.sh  setup-environment.sh
rust/compat-tests/c-to-rust/: Cargo.toml  test_all.sh  writer.c
rust/compat-tests/c-to-rust/src/: main.rs
rust/compat-tests/rust-to-c/: Cargo.toml  test-all.sh  verify.c
rust/compat-tests/rust-to-c/src/: basic_mesh.rs  element_blocks.rs  main.rs  maps.rs  naming.rs  qa_info.rs  sets.rs  variables.rs
rust/compat-tests/shared/: README.md
rust/compat-tests/tools/: build_all.sh  build_c.sh  build_rust.sh  clean.sh  run_all_tests.sh  test_all_compatibility.sh  test_c_verifier.sh  test_full_roundtrip.sh  test_rust_generated.sh
rust/data/: square_surface_pressure_temperature_notime.e  two_blocks.e
rust/examples/: .gitignore  README.md  TRANSFORMATION_EXAMPLES.md  benchmark_transformations.sh  generate_large_exodus.py  process_exodus_memory_efficient.py  run_rust_example.sh  transform_large_mesh.py
rust/examples/run_python_example/: build_and_run.sh  read_coordinates.py
rust/exo-cfd-transform/: Cargo.toml  exo-cfd-transform.1
rust/exo-cfd-transform/examples/: create_test_mesh.rs  verify_merged_mesh.rs
rust/exo-cfd-transform/src/: main.rs
rust/exodus-py/: .gitignore  API_ANALYSIS.md  CHANGELOG.md  COMPLETION_SUMMARY.md  C_BINDINGS.md  Cargo.toml  EXOMERGE.md  EXOMERGE_FINAL_SUMMARY.md  EXOMERGE_REVIEW.md  EXOMERGE_STATUS.md  FEATURE_GAP_ANALYSIS.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MERGE_PLAN.md  NUMPY_MIGRATION.md  README.md  TEST_COVERAGE.md  TEST_FIXES_SUMMARY.md  apply_exomerge_patches.py  build-docs.sh  exomerge_implementations.py  install_and_test.sh  integrate_implementations.py  pyproject.toml  run_tests.py  test_element_block_ops.py  test_phase3_complete.py
rust/exodus-py/benchmarks/: README.md  benchmark_numpy_vs_lists.py
rust/exodus-py/benchmarks/chunking_benchmark/: README.md  generate_mesh.py  plot_results.py  run_all.sh  run_benchmark_suite.py  submit_benchmark.sh  transform_mesh.py
rust/exodus-py/benchmarks/chunking_benchmark/merlin/: .nfs804502ab01e817f5000045de  README.md  chunking_benchmark.yaml  collect_results.py  pgen_configs.py  pyproject.toml  run.sh  stop.sh  workers.sbatch  write_result_json.py
rust/exodus-py/docs/: .gitignore  Makefile  api_reference.md  conf.py  conftest.py  index.md  quickstart.md  requirements.txt  search.md  user_guide.md
rust/exodus-py/examples/: nodeset_to_sideset.py  numpy_demo.py  read_mesh.py  simple_mesh.py
rust/exodus-py/python/exodus/: __init__.py  __init__.pyi  exodus.pyi  exomerge.py  exomerge.pyi  exomerge_v2.py
rust/exodus-py/src/: assembly.rs  attribute.rs  block.rs  builder.rs  coord.rs  error.rs  file.rs  geometry.rs  lib.rs  map.rs  metadata.rs  numpy_utils.rs  performance.rs  search.rs  set.rs  transform.rs  types.rs  variable.rs
rust/exodus-py/tests/: test_assemblies.py  test_attributes.py  test_blocks.py  test_builder.py  test_coordinates.py  test_exomerge.py  test_exomerge_implementation.py  test_exomerge_remaining_features.py  test_file_operations.py  test_geometry.py  test_integration.py  test_maps.py  test_metadata.py  test_numpy_integration.py  test_performance.py  test_phase3_element_block_ops.py  test_phase3_transformations.py  test_phases_10_11.py  test_phases_4_6_simple.py  test_phases_7_8_9.py  test_reduction_variables.py  test_sample_mesh.py  test_search.py  test_sets.py  test_transformations.py  test_variables.py
rust/exodus-rs/: .gitignore  CLAUDE.md  Cargo.toml  DEV.md  PERFORMANCE.md  README.md  TRANSFORMATIONS.md  test_output.txt
rust/exodus-rs/benches/: connectivity.rs  coordinates.rs  file_ops.rs  variables.rs
rust/exodus-rs/docs/: cookbook.md  guide.md  migration.md
rust/exodus-rs/examples/: 01_create_file.rs  02_initialize.rs  03_coordinates.rs  04_element_blocks.rs  05_sets.rs  06_variables.rs  07_maps_names.rs  08_assemblies_blobs.rs  09_high_level_builder.rs  09b_builder_verification.rs  10_define_mode_operations.rs  11_mesh_transformations.rs  11_performance_tuning.rs  12_process_large_file.rs  13_transform_large_mesh.rs
rust/exodus-rs/src/: assembly.rs  attribute.rs  blob.rs  block.rs  builder.rs  coord.rs  error.rs  file.rs  geometry.rs  init.rs  lib.rs  map.rs  metadata.rs  performance.rs  search.rs  set.rs  sideset_utils.rs  time.rs  topology.rs  transform_ops.rs  transformations.rs  types.rs  variable.rs  views.rs
rust/exodus-rs/src/raw/: mod.rs
rust/exodus-rs/src/utils/: constants.rs  mod.rs  naming.rs  netcdf_ext.rs
rust/exodus-rs/tests/: test_edge_cases.rs  test_integration.rs  test_metadata.rs  test_ndarray_integration.rs  test_performance.rs  test_phase1_file_lifecycle.rs  test_phase2_initialization.rs  test_phase3_coordinates.rs  test_phase4_blocks.rs  test_phase5_sets.rs  test_phase6_comprehensive.rs  test_phase7_maps_names.rs  test_phase9_builder.rs  test_reduction_variables.rs  test_sample_mesh.rs  test_sets.rs  test_sideset_conversion.rs  test_storage_format.rs  test_variables.rs
rust/rexonator/: Cargo.toml  PLAN.md  REVIEW.md  rexonator.1
rust/rexonator/src/: cli.rs  copy_mirror_merge.rs  main.rs  man.rs  operations.rs  parsers.rs  performance.rs  progress.rs
rust/rexonator/tests/: fixtures.rs  integration_basic.rs  integration_cmm.rs  integration_tests.rs  xfail_planned.rs
rust/rexonator/tests/fixtures/: mod.rs
(+9 files in other folders)
