[package]
name = "exodus-py"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["SEACAS Development Team"]
license = "BSD-3-Clause"
description = "Python bindings for exodus-rs - Pure Rust implementation of Exodus II"
repository = "https://github.com/rndubs/seacas"
keywords = ["exodus", "finite-element", "mesh", "python", "bindings"]
categories = ["science", "api-bindings"]

[lib]
name = "exodus"
crate-type = ["cdylib"]

# NOTE: PyO3 extension modules with the "extension-module" feature cannot run
# Rust unit tests (cargo test) because they don't link against libpython.
# All tests are Python integration tests in tests/ - run with: pytest tests/

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "multiple-pymethods"] }

# Exodus-rs library (local dependency)
exodus-rs = { path = "../exodus-rs", features = ["netcdf4"] }

# NumPy integration (optional)
numpy = { version = "0.27", optional = true }

[dev-dependencies]
# Testing
approx = "0.5"
tempfile = "3.8"

[features]
default = []
numpy = ["dep:numpy"]

[package.metadata.maturin]
# Maturin build configuration
python-source = "python"
module-name = "exodus"
