[package]
name = "exodus-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["SEACAS Development Team"]
license = "BSD-3-Clause"
description = "Pure Rust implementation of the Exodus II finite element data format"
repository = "https://github.com/sandialabs/seacas"
keywords = ["exodus", "finite-element", "mesh", "netcdf", "hdf5"]
categories = ["science", "parser-implementations"]
readme = "README.md"

[dependencies]
# Error handling
thiserror = "1.0"

# NetCDF backend (will be required in Phase 1)
netcdf = { version = "0.11", optional = true }

# Optional: ndarray support
ndarray = { version = "0.16", optional = true }

# Optional: parallel I/O
rayon = { version = "1.8", optional = true }

# Optional: serde support for types
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# Testing
approx = "0.5"        # Floating point comparisons
tempfile = "3.8"      # Temporary test files
proptest = "1.4"      # Property-based testing

[features]
default = []
# NetCDF-4 support (requires system HDF5/NetCDF libraries)
netcdf4 = ["dep:netcdf"]
ndarray = ["dep:ndarray"]
parallel = ["dep:rayon"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
