[package]
name = "exodus-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["SEACAS Development Team"]
license = "BSD-3-Clause"
description = "Pure Rust implementation of the Exodus II finite element data format"
repository = "https://github.com/sandialabs/seacas"
keywords = ["exodus", "finite-element", "mesh", "netcdf", "hdf5"]
categories = ["science", "parser-implementations"]
readme = "README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }

# NetCDF backend (will be required in Phase 1)
netcdf = { workspace = true, optional = true }

# Optional: ndarray support (version managed by workspace for numpy compatibility)
ndarray = { workspace = true, optional = true }

# Optional: parallel I/O
rayon = { workspace = true, optional = true }

# Optional: serde support for types
serde = { workspace = true, optional = true }

[dev-dependencies]
# Testing
approx = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true }

[features]
default = ["netcdf4"]
# NetCDF-4 support (requires system HDF5/NetCDF libraries)
netcdf4 = ["dep:netcdf"]
ndarray = ["dep:ndarray"]
numpy-compat = ["ndarray"]  # NumPy-compatible layout for zero-copy transfer
parallel = ["dep:rayon"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "file_ops"
harness = false

[[bench]]
name = "coordinates"
harness = false

[[bench]]
name = "connectivity"
harness = false

[[bench]]
name = "variables"
harness = false
