[package]
name = "exodus-rust-to-c-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Use the local exodus-rs crate
exodus-rs = { path = "../../exodus-rs", features = ["netcdf4"] }

# CLI and utilities
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
